--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.1.0
   json_annotation: ^4.9.0
   intl: ^0.19.0
+  uuid: ^4.4.2
 
 dev_dependencies:
   flutter_test:
