--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   json_annotation: ^4.9.0
   intl: ^0.19.0
   uuid: ^4.4.2
+  syncfusion_flutter_charts: ^26.1.41+1
 
 dev_dependencies:
   flutter_test:
