--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.19.0
   uuid: ^4.4.2
   syncfusion_flutter_charts: ^26.1.41+1
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
