--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^4.4.2
   syncfusion_flutter_charts: ^26.1.41+1
   dropdown_search: ^5.0.6
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
