--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   syncfusion_flutter_charts: ^26.1.41+1
   dropdown_search: ^5.0.6
   http: ^1.2.2
+  syncfusion_flutter_pdf: ^26.1.42
+  share_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
